Fix: raise Popmenu z-index

--- a/views/adveditor/public/css/editor.css
+++ b/views/adveditor/public/css/editor.css
@@ -15,3 +15,5 @@
 
 .cjt-tb-link {height: 22px;display: inline-block;width: 20px;}
 .icons-group {height: 400px;}
+
+.cjt-toolbox .icons-group .popup-menu {z-index: 7;}
